# spark-optimus

./: .env.example  .gitignore  README.md  config.yaml  config_aws.yaml  debug_sql.json  demo_agent.py  full_performance_resp.json  hackathon_agent.py  implementation_plan.md  launch_inspector.sh  mcp_aws_wrapper.sh  mcp_bridge.py  pyproject.toml  requirements.txt  run_full_dashboard.sh  run_full_system.sh  run_mcp_http.sh  server.py  setup_local_spark.md  setup_local_spark.sh  test_aws_mcp.py  verify_http.py
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: Visualizer.jsx
dashboard/src/hooks/: useMCP.js  useSparkAPI.js
demo_repo/: deploy_job.sh  spark-defaults.conf
mock_data/: history_server_response.json
spark_config_mcp/: __init__.py  config_analyzer.py  history_server_client.py  models.py  server.py  spark_config_parser.py
